src/objects/IADApiGeeEndPoint__mdt.object
<CustomObject>
    <fields>
        <fullName>Is_Async__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this if the API call needs to be Asynchronous.Uses Continuation.</description>
        <label>Is Async?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <label>Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>GET</fullName>
                    <default>true</default>
                    <label>GET</label>
                </value>
                <value>
                    <fullName>PUT</fullName>
                </value>
                <value>
                    <fullName>POST</fullName>
                </value>
                <value>
                    <fullName>PATCH</fullName>
                </value>
                <value>
                    <fullName>DELETE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>link__c</fullName>
        <label>link</label>
        <type>Url</type>
    </fields>
    <label>IADApiGeeEndPoint</label>
    <pluralLabel>IADApiGeeEndPoints</pluralLabel>
</CustomObject>